# data-insight

./: .gitignore  BLOCK_COMPOSITION_ANALYSIS.md  CLAUDE_MD_I18N_KEY_UPDATE.md  OOMOL_DATA_ANALYSIS_BLOCKS_GUIDE.md  PREVIEW_GUIDE.md  QUICK_ANALYSIS_DESIGN.md  README.md  README_zh-CN.md  SMART_DATA_ANALYSIS_WORKFLOW_GUIDE.md  SUBFLOWS_GUIDE.md  TYPE_COMPATIBILITY_ANALYSIS.md  package-lock.json  package.json  package.oo.yaml  pyproject.toml  sample_sales.csv
flows/test/: flow.oo.yaml
flows/test-chart-array-v2/: flow.oo.yaml
flows/test-chart-selector/: flow.oo.yaml
flows/test-complete-analysis/: flow.oo.yaml
flows/test-data-analysis/: .flow.ui.oo.json  flow.oo.yaml
flows/test-data-extractor/: .flow.ui.oo.json  flow.oo.yaml
flows/test-data-quality/: flow.oo.yaml
flows/test-exploration-report/: flow.oo.yaml
flows/test-preview/: .flow.ui.oo.json  flow.oo.yaml
flows/test-quick-analysis-subflow/: .flow.ui.oo.json  flow.oo.yaml
flows/test-report-generator/: .flow.ui.oo.json  flow.oo.yaml
flows/test-smart-analysis/: flow.oo.yaml
flows/test-stat-analyzer/: flow.oo.yaml
flows/test-statistical-analysis/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/complete-data-analysis/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/quick-analysis/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/smart-data-analysis/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/chart-array-builder/: __init__.py  task.oo.yaml
tasks/chart-generator/: __init__.py  task.oo.yaml
tasks/chart-recommender/: __init__.py  task.oo.yaml
(+23 files in other folders)
