[project]
name = "data-insight"
version = "0.1.0"
description = "OOMOL-based data analysis and visualization workflow toolkit"
authors = [
    {name = "shaun",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "duckdb (>=1.4.3,<2.0.0)",
    "altair (>=6.0.0,<7.0.0)",
    "vl-convert-python (>=1.9.0.post1,<2.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pymysql (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "data_insight", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
